# SQLiteDB

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp  test.db
include/SQLiteDB/: BulkInserter.hpp  SQLiteDatabase.hpp  SQLiteException.hpp  Statement.hpp  types.hpp
src/: BulkInserter.cpp  CMakeLists.txt  SQLiteDatabase.cpp  Statement.cpp
src/internal/: SQLiteDatabaseInternal.cpp  SQLiteDatabaseInternal.hpp  StatementInternal.cpp  StatementInternal.hpp
